--- a/Project 3 Part 1.ipynb
+++ b/Project 3 Part 1.ipynb
@@ -1,6 +1,229 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d5455d16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7f2b2707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basics_url=\"https://datasets.imdbws.com/title.basics.tsv.gz\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "55db213c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_aka = 'https://datasets.imdbws.com/title.akas.tsv.gz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5ae34be1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_ratings = 'https://datasets.imdbws.com/title.ratings.tsv.gz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5e64248d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tconst</th>\n",
+       "      <th>titleType</th>\n",
+       "      <th>primaryTitle</th>\n",
+       "      <th>originalTitle</th>\n",
+       "      <th>isAdult</th>\n",
+       "      <th>startYear</th>\n",
+       "      <th>endYear</th>\n",
+       "      <th>runtimeMinutes</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0000001</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Carmencita</td>\n",
+       "      <td>Carmencita</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1894</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Documentary,Short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0000002</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Le clown et ses chiens</td>\n",
+       "      <td>Le clown et ses chiens</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Animation,Short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0000003</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Pauvre Pierrot</td>\n",
+       "      <td>Pauvre Pierrot</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Animation,Comedy,Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0000004</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Un bon bock</td>\n",
+       "      <td>Un bon bock</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Animation,Short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Blacksmith Scene</td>\n",
+       "      <td>Blacksmith Scene</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1893</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Comedy,Short</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      tconst titleType            primaryTitle           originalTitle  \\\n",
+       "0  tt0000001     short              Carmencita              Carmencita   \n",
+       "1  tt0000002     short  Le clown et ses chiens  Le clown et ses chiens   \n",
+       "2  tt0000003     short          Pauvre Pierrot          Pauvre Pierrot   \n",
+       "3  tt0000004     short             Un bon bock             Un bon bock   \n",
+       "4  tt0000005     short        Blacksmith Scene        Blacksmith Scene   \n",
+       "\n",
+       "  isAdult startYear endYear runtimeMinutes                    genres  \n",
+       "0       0      1894      \\N              1         Documentary,Short  \n",
+       "1       0      1892      \\N              5           Animation,Short  \n",
+       "2       0      1892      \\N              4  Animation,Comedy,Romance  \n",
+       "3       0      1892      \\N             12           Animation,Short  \n",
+       "4       0      1893      \\N              1              Comedy,Short  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basics = pd.read_csv(basics_url, sep='\\t', low_memory=False)\n",
+    "basics.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b37b19cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titleAka = pd.read_csv(title_aka, sep='\\t', low_memory=False)\n",
+    "titleAka.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5bd84af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings = pd.read_csv(title_ratings, sep='\\t', low_memory=False)\n",
+    "ratings.head()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python (dojo-env)",
+   "language": "python",
+   "name": "dojo-env"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
