Update Project 3 Part 1.ipynb
Completed data cleaning

--- a/Project 3 Part 1.ipynb
+++ b/Project 3 Part 1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "631731d6",
+   "id": "b641b82d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aedddfa3",
+   "id": "f5ee09f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2b0ca6a2",
+   "id": "9edc69e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fac0ea81",
+   "id": "61ef6517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "389728bc",
+   "id": "378655a8",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "87f5d83d",
+   "id": "4e83f8ec",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "658bc303",
+   "id": "946cf4cb",
    "metadata": {
     "scrolled": true
    },
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e1cbe25c",
+   "id": "5eec9f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1eb917c7",
+   "id": "8ee765b8",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3c5f7b70",
+   "id": "30305e80",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1cd2256c",
+   "id": "973eaa72",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9e528b96",
+   "id": "a8438091",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "74c489f8",
+   "id": "8f1edcf3",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1c0816df",
+   "id": "cce2db3a",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "71dd111e",
+   "id": "1381fe80",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "692a3923",
+   "id": "325cb4e7",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b1e6ee41",
+   "id": "9cc7e930",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4bb4c51a",
+   "id": "665a9aad",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4d5661bb",
+   "id": "a80d306b",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fc3c7017",
+   "id": "f1d5ce86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a2275e72",
+   "id": "ae6f222e",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e0244f60",
+   "id": "8a48b080",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5e2e3e8d",
+   "id": "7fbafc3c",
    "metadata": {},
    "outputs": [
     {
@@ -1440,13 +1440,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "62e702a6",
+   "execution_count": 38,
+   "id": "172a4991",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>titleId</th>\n",
+       "      <th>ordering</th>\n",
+       "      <th>title</th>\n",
+       "      <th>region</th>\n",
+       "      <th>language</th>\n",
+       "      <th>types</th>\n",
+       "      <th>attributes</th>\n",
+       "      <th>isOriginalTitle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>tt0000001</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Carmencita</td>\n",
+       "      <td>US</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>imdbDisplay</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>tt0000002</td>\n",
+       "      <td>7</td>\n",
+       "      <td>The Clown and His Dogs</td>\n",
+       "      <td>US</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>literal English title</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Blacksmith Scene</td>\n",
+       "      <td>US</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>imdbDisplay</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Blacksmithing Scene</td>\n",
+       "      <td>US</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>alternative</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Blacksmith Scene #1</td>\n",
+       "      <td>US</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>alternative</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      titleId  ordering                   title region language        types  \\\n",
+       "5   tt0000001         6              Carmencita     US       \\N  imdbDisplay   \n",
+       "14  tt0000002         7  The Clown and His Dogs     US       \\N           \\N   \n",
+       "33  tt0000005        10        Blacksmith Scene     US       \\N  imdbDisplay   \n",
+       "36  tt0000005         1     Blacksmithing Scene     US       \\N  alternative   \n",
+       "41  tt0000005         6     Blacksmith Scene #1     US       \\N  alternative   \n",
+       "\n",
+       "               attributes isOriginalTitle  \n",
+       "5                      \\N               0  \n",
+       "14  literal English title               0  \n",
+       "33                     \\N               0  \n",
+       "36                     \\N               0  \n",
+       "41                     \\N               0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titleAka = titleAka.loc[titleAka['region'] == 'US']\n",
+    "titleAka.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a2e1373b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bandj\\AppData\\Local\\Temp\\ipykernel_25848\\570712742.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  titleAka.replace({'\\\\N':np.nan}, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "titleAka.replace({'\\\\N':np.nan}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fc6d7512",
    "metadata": {},
    "outputs": [],
    "source": [
-    "titleAka.loc[titleAka['region'] == 'US']"
+    "ratings.replace({'\\\\N':np.nan}, inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "9f328af3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keepers2 =ratings['tconst'].isin(titleAka['titleId'])\n",
+    "ratings = ratings[keepers2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf050d18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
