--- a/Project 3 Part 1.ipynb
+++ b/Project 3 Part 1.ipynb
@@ -1606,11 +1606,383 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf050d18",
+   "execution_count": 46,
+   "id": "daea4c20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.makedirs('Data/', exist_ok=True)\n",
+    "os.listdir('Data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "ebb7ddde",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "basics.to_csv(\"Data/title_basics.csv.gz\",compression='gzip',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "f1a7b0a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tconst</th>\n",
+       "      <th>titleType</th>\n",
+       "      <th>primaryTitle</th>\n",
+       "      <th>originalTitle</th>\n",
+       "      <th>isAdult</th>\n",
+       "      <th>startYear</th>\n",
+       "      <th>endYear</th>\n",
+       "      <th>runtimeMinutes</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0035423</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Kate &amp; Leopold</td>\n",
+       "      <td>Kate &amp; Leopold</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>118</td>\n",
+       "      <td>Comedy,Fantasy,Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0062336</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Tango of the Widower and Its Distorting Mi...</td>\n",
+       "      <td>El tango del viudo y su espejo deformante</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0069049</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>122</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0079644</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>November 1828</td>\n",
+       "      <td>November 1828</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>140</td>\n",
+       "      <td>Drama,War</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0088751</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Naked Monster</td>\n",
+       "      <td>The Naked Monster</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Comedy,Horror,Sci-Fi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      tconst titleType                                       primaryTitle  \\\n",
+       "0  tt0035423     movie                                     Kate & Leopold   \n",
+       "1  tt0062336     movie  The Tango of the Widower and Its Distorting Mi...   \n",
+       "2  tt0069049     movie                         The Other Side of the Wind   \n",
+       "3  tt0079644     movie                                      November 1828   \n",
+       "4  tt0088751     movie                                  The Naked Monster   \n",
+       "\n",
+       "                               originalTitle  isAdult  startYear  endYear  \\\n",
+       "0                             Kate & Leopold        0       2001      NaN   \n",
+       "1  El tango del viudo y su espejo deformante        0       2020      NaN   \n",
+       "2                 The Other Side of the Wind        0       2018      NaN   \n",
+       "3                              November 1828        0       2001      NaN   \n",
+       "4                          The Naked Monster        0       2005      NaN   \n",
+       "\n",
+       "   runtimeMinutes                  genres  \n",
+       "0             118  Comedy,Fantasy,Romance  \n",
+       "1              70                   Drama  \n",
+       "2             122                   Drama  \n",
+       "3             140               Drama,War  \n",
+       "4             100    Comedy,Horror,Sci-Fi  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basics = pd.read_csv(\"Data/title_basics.csv.gz\", low_memory = False)\n",
+    "basics.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "2877ef7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>titleId</th>\n",
+       "      <th>ordering</th>\n",
+       "      <th>title</th>\n",
+       "      <th>region</th>\n",
+       "      <th>language</th>\n",
+       "      <th>types</th>\n",
+       "      <th>attributes</th>\n",
+       "      <th>isOriginalTitle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0000001</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Carmencita</td>\n",
+       "      <td>US</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>imdbDisplay</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0000002</td>\n",
+       "      <td>7</td>\n",
+       "      <td>The Clown and His Dogs</td>\n",
+       "      <td>US</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>literal English title</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Blacksmith Scene</td>\n",
+       "      <td>US</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>imdbDisplay</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Blacksmithing Scene</td>\n",
+       "      <td>US</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>alternative</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Blacksmith Scene #1</td>\n",
+       "      <td>US</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>alternative</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     titleId  ordering                   title region language        types  \\\n",
+       "0  tt0000001         6              Carmencita     US      NaN  imdbDisplay   \n",
+       "1  tt0000002         7  The Clown and His Dogs     US      NaN          NaN   \n",
+       "2  tt0000005        10        Blacksmith Scene     US      NaN  imdbDisplay   \n",
+       "3  tt0000005         1     Blacksmithing Scene     US      NaN  alternative   \n",
+       "4  tt0000005         6     Blacksmith Scene #1     US      NaN  alternative   \n",
+       "\n",
+       "              attributes  isOriginalTitle  \n",
+       "0                    NaN              0.0  \n",
+       "1  literal English title              0.0  \n",
+       "2                    NaN              0.0  \n",
+       "3                    NaN              0.0  \n",
+       "4                    NaN              0.0  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titleAka.to_csv(\"Data/title_Aka.csv.gz\",compression='gzip',index=False)\n",
+    "titleAka = pd.read_csv(\"Data/title_Aka.csv.gz\", low_memory = False)\n",
+    "titleAka.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "79c0d8c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tconst</th>\n",
+       "      <th>averageRating</th>\n",
+       "      <th>numVotes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0000001</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>1966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0000002</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0000006</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0000007</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>816</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      tconst  averageRating  numVotes\n",
+       "0  tt0000001            5.7      1966\n",
+       "1  tt0000002            5.8       264\n",
+       "2  tt0000005            6.2      2610\n",
+       "3  tt0000006            5.2       181\n",
+       "4  tt0000007            5.4       816"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.to_csv(\"Data/title_ratings.csv.gz\",compression='gzip',index=False)\n",
+    "ratings = pd.read_csv(\"Data/title_ratings.csv.gz\", low_memory = False)\n",
+    "ratings.head()"
+   ]
   }
  ],
  "metadata": {
