Final commit part 1

--- a/Project 3 Part 1.ipynb
+++ b/Project 3 Part 1.ipynb
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "daea4c20",
+   "id": "4134c69e",
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ebb7ddde",
+   "id": "ca1cf49c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f1a7b0a9",
+   "id": "436bc5b8",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "2877ef7b",
+   "id": "b87ce115",
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "79c0d8c5",
+   "id": "f4a5fecf",
    "metadata": {},
    "outputs": [
     {
@@ -1983,6 +1983,106 @@
     "ratings = pd.read_csv(\"Data/title_ratings.csv.gz\", low_memory = False)\n",
     "ratings.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "62ed42f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 149854 entries, 0 to 149853\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column          Non-Null Count   Dtype  \n",
+      "---  ------          --------------   -----  \n",
+      " 0   tconst          149854 non-null  object \n",
+      " 1   titleType       149854 non-null  object \n",
+      " 2   primaryTitle    149854 non-null  object \n",
+      " 3   originalTitle   149854 non-null  object \n",
+      " 4   isAdult         149854 non-null  int64  \n",
+      " 5   startYear       149854 non-null  int64  \n",
+      " 6   endYear         0 non-null       float64\n",
+      " 7   runtimeMinutes  149854 non-null  int64  \n",
+      " 8   genres          149854 non-null  object \n",
+      "dtypes: float64(1), int64(3), object(5)\n",
+      "memory usage: 10.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "basics.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ef36cb0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1433441 entries, 0 to 1433440\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column           Non-Null Count    Dtype  \n",
+      "---  ------           --------------    -----  \n",
+      " 0   titleId          1433441 non-null  object \n",
+      " 1   ordering         1433441 non-null  int64  \n",
+      " 2   title            1433441 non-null  object \n",
+      " 3   region           1433441 non-null  object \n",
+      " 4   language         3893 non-null     object \n",
+      " 5   types            978268 non-null   object \n",
+      " 6   attributes       46479 non-null    object \n",
+      " 7   isOriginalTitle  1432096 non-null  float64\n",
+      "dtypes: float64(1), int64(1), object(6)\n",
+      "memory usage: 87.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "titleAka.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "88b4fe39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 496916 entries, 0 to 496915\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column         Non-Null Count   Dtype  \n",
+      "---  ------         --------------   -----  \n",
+      " 0   tconst         496916 non-null  object \n",
+      " 1   averageRating  496916 non-null  float64\n",
+      " 2   numVotes       496916 non-null  int64  \n",
+      "dtypes: float64(1), int64(1), object(1)\n",
+      "memory usage: 11.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "ratings.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "473ae182",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
