--- a/Project 3 Part 2.ipynb
+++ b/Project 3 Part 2.ipynb
@@ -3,17 +3,43 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b38b07c7",
-   "metadata": {},
-   "outputs": [],
+   "id": "e52118d5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tmdbsimple in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (2.9.1)\n",
+      "Requirement already satisfied: requests in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from tmdbsimple) (2.28.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (2022.9.24)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (1.26.13)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (3.4)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (2.0.4)\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "!pip install tmdbsimple"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "b38b07c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from tqdm.notebook import tqdm_notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2ab79f6d",
    "metadata": {},
    "outputs": [
@@ -23,7 +49,7 @@
        "dict_keys(['api-key'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "28fc80bc",
    "metadata": {},
    "outputs": [],
@@ -49,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0172a477",
    "metadata": {},
    "outputs": [],
@@ -71,6 +97,31 @@
     "            info['certification'] = c['certification']\n",
     "    \n",
     "    return info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "92410132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_json(new_data, filename):\n",
+    "    \"\"\"Appends a list of records (new_data) to a json file(filename)\n",
+    "    Adapted from: https://www.geeksforgeeks.org/append-to-json-file-using-python/\"\"\"\n",
+    "    \n",
+    "    with open (filename, 'r+') as file:\n",
+    "        #First we load the existing data into a dict\n",
+    "        file_data = json.load(file)\n",
+    "        #Choose extend or append\n",
+    "        if(type(new_data)== list) & (type(file_data)==list):\n",
+    "            file_data.extend(new_data)\n",
+    "        else:\n",
+    "            file_data.append(new_data)\n",
+    "        #Sets file's current position at offset\n",
+    "        file.seek(0)\n",
+    "        #convert back to json\n",
+    "        json.dump(file_data, file)"
    ]
   },
   {
@@ -338,7 +389,10 @@
     {
      "data": {
       "text/plain": [
-       "['title_Aka.csv.gz', 'title_basics.csv.gz', 'title_ratings.csv.gz']"
+       "['.ipynb_checkpoints',\n",
+       " 'title_Aka.csv.gz',\n",
+       " 'title_basics.csv.gz',\n",
+       " 'title_ratings.csv.gz']"
       ]
      },
      "execution_count": 9,
@@ -356,26 +410,257 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "92410132",
+   "id": "fcb38b22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tconst</th>\n",
+       "      <th>titleType</th>\n",
+       "      <th>primaryTitle</th>\n",
+       "      <th>originalTitle</th>\n",
+       "      <th>isAdult</th>\n",
+       "      <th>startYear</th>\n",
+       "      <th>endYear</th>\n",
+       "      <th>runtimeMinutes</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0035423</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Kate &amp; Leopold</td>\n",
+       "      <td>Kate &amp; Leopold</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>118</td>\n",
+       "      <td>Comedy,Fantasy,Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0062336</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Tango of the Widower and Its Distorting Mi...</td>\n",
+       "      <td>El tango del viudo y su espejo deformante</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0069049</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>122</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0088751</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Naked Monster</td>\n",
+       "      <td>The Naked Monster</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Comedy,Horror,Sci-Fi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0096056</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Crime and Punishment</td>\n",
+       "      <td>Crime and Punishment</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>126</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      tconst titleType                                       primaryTitle  \\\n",
+       "0  tt0035423     movie                                     Kate & Leopold   \n",
+       "1  tt0062336     movie  The Tango of the Widower and Its Distorting Mi...   \n",
+       "2  tt0069049     movie                         The Other Side of the Wind   \n",
+       "3  tt0088751     movie                                  The Naked Monster   \n",
+       "4  tt0096056     movie                               Crime and Punishment   \n",
+       "\n",
+       "                               originalTitle  isAdult  startYear  endYear  \\\n",
+       "0                             Kate & Leopold        0       2001      NaN   \n",
+       "1  El tango del viudo y su espejo deformante        0       2020      NaN   \n",
+       "2                 The Other Side of the Wind        0       2018      NaN   \n",
+       "3                          The Naked Monster        0       2005      NaN   \n",
+       "4                       Crime and Punishment        0       2002      NaN   \n",
+       "\n",
+       "   runtimeMinutes                  genres  \n",
+       "0             118  Comedy,Fantasy,Romance  \n",
+       "1              70                   Drama  \n",
+       "2             122                   Drama  \n",
+       "3             100    Comedy,Horror,Sci-Fi  \n",
+       "4             126                   Drama  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basics = pd.read_csv('Data/title_basics.csv.gz')\n",
+    "basics.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bbc00b55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_json(new_data, filename):\n",
-    "    \"\"\"Appends a list of records (new_data) to a json file(filename)\n",
-    "    Adapted from: https://www.geeksforgeeks.org/append-to-json-file-using-python/\"\"\"\n",
-    "    \n",
-    "    with open (filename, 'r+') as file:\n",
-    "        #First we load the existing data into a dict\n",
-    "        file_data = json.load(file)\n",
-    "        #Choose extend or append\n",
-    "        if(type(new_data)== list) & (type(file_data)==list):\n",
-    "            file_data.extend(new_data)\n",
-    "        else:\n",
-    "            file_data.append(new_data)\n",
-    "        #Sets file's current position at offset\n",
-    "        file.seek(0)\n",
-    "        #convert back to json\n",
-    "        json.dump(file_data, file)"
+    "YEARS_TO_GET = [2000,2001]\n",
+    "errors= []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "78e087c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c5e9022681645ea8e97f01b8081f2b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "YEARS:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ce8352cbf4e4067b092353461fd896b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Movies from 2000:   0%|          | 0/1446 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55401366eeca4b18bab410d7c31ec76f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Movies from 2001:   0%|          | 0/1570 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for YEAR in tqdm_notebook(YEARS_TO_GET, desc='YEARS', position=0):\n",
+    "    JSON_FILE = f'{FOLDER}tmdb_api_results_{YEAR}.json'\n",
+    "    file_exists = os.path.isfile(JSON_FILE)\n",
+    "\n",
+    "    # If it does not exist: create it\n",
+    "    if file_exists == False:\n",
+    "    # save an empty dict with just \"imdb_id\" to the new json file.\n",
+    "        with open(JSON_FILE,'w') as f:\n",
+    "            json.dump([{'imdb_id':0}],f)\n",
+    "\n",
+    "    #Saving new year as the current df\n",
+    "    df = basics.loc[ basics['startYear']==YEAR].copy()\n",
+    "    # saving movie ids to list\n",
+    "    movie_ids = df['tconst'].copy()\n",
+    "    movie_ids\n",
+    "\n",
+    "    #Load existing dat afrom json into a dataframe called previous df\n",
+    "    previous_df = pd.read_json(JSON_FILE)\n",
+    "    previous_df\n",
+    "\n",
+    "    # filter out any ids that are already in the JSON_FILE\n",
+    "    movie_ids_to_get = movie_ids[~movie_ids.isin(previous_df['imdb_id'])]\n",
+    "\n",
+    "#Get index and movie id from list\n",
+    "#Inner loop\n",
+    "\n",
+    "    for movie_id in tqdm_notebook(movie_ids_to_get,\n",
+    "                                 desc=f'Movies from {YEAR}',\n",
+    "                                 position=1,\n",
+    "                                 leave=True):\n",
+    "\n",
+    "        try:\n",
+    "            #Retreive the data for the movie id\n",
+    "            temp = get_movie_with_rating(movie_id)\n",
+    "            #Append/Extend results into existing file using a pre made function\n",
+    "            write_json(temp, JSON_FILE)\n",
+    "            #Short 20 ms sleep to prevent overwhelming the sever\n",
+    "            time.sleep(.02)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            errors.append([movie_id, e])\n",
+    "\n",
+    "    final_year_df = pd.read_json(JSON_FILE)\n",
+    "    final_year_df.to_csv(f'{FOLDER} final_tmdb_data{YEAR}.csv.gz', compression='gzip', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec97b91e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_2000 = pd.read_csv('Data/final_tmdb_data_2000.csv.gz')\n",
+    "year_2001 = pd.read_csv('Data/final_tmdb_data_2001.csv.gz')\n",
+    "df = pd.concat([year_2000, year_2001], ignore_index=True)\n",
+    "               "
    ]
   }
  ],
