--- a/Project 3 Part 2.ipynb
+++ b/Project 3 Part 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e52118d5",
+   "id": "b0e1c308",
    "metadata": {
     "scrolled": true
    },
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fcb38b22",
+   "id": "c6fbb45c",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bbc00b55",
+   "id": "251120c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "78e087c2",
+   "id": "ee89a4be",
    "metadata": {},
    "outputs": [
     {
@@ -652,13 +652,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec97b91e",
+   "execution_count": 18,
+   "id": "a315b860",
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_2000 = pd.read_csv('Data/final_tmdb_data_2000.csv.gz')\n",
-    "year_2001 = pd.read_csv('Data/final_tmdb_data_2001.csv.gz')\n",
+    "year_2000 = pd.read_csv('Data/ final_tmdb_data2000.csv.gz')\n",
+    "year_2001 = pd.read_csv('Data/ final_tmdb_data2001.csv.gz')\n",
     "df = pd.concat([year_2000, year_2001], ignore_index=True)\n",
     "               "
    ]
