Submitted PD to csv

--- a/Project 3 Part 2.ipynb
+++ b/Project 3 Part 2.ipynb
@@ -662,6 +662,16 @@
     "df = pd.concat([year_2000, year_2001], ignore_index=True)\n",
     "               "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "453c2289",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"Data/tmdb_results_combined.csv.gz\",compression='gzip',index=False)"
+   ]
   }
  ],
  "metadata": {
