Changed budget / revenue filter

--- a/Project 3 Part 2.ipynb
+++ b/Project 3 Part 2.ipynb
@@ -15,9 +15,9 @@
       "Requirement already satisfied: tmdbsimple in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (2.9.1)\n",
       "Requirement already satisfied: requests in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from tmdbsimple) (2.28.1)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (2022.9.24)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (1.26.13)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (2.0.4)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (3.4)\n",
-      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (2.0.4)\n"
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\bandj\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from requests->tmdbsimple) (1.26.13)\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Avengers',\n",
        " 'overview': 'When an unexpected enemy emerges and threatens global safety and security, Nick Fury, director of the international peacekeeping agency known as S.H.I.E.L.D., finds himself in need of a team to pull the world back from the brink of disaster. Spanning the globe, a daring recruitment effort begins!',\n",
-       " 'popularity': 121.829,\n",
+       " 'popularity': 144.021,\n",
        " 'poster_path': '/RYMX2wcKCBAr24UyPD7xwmjaTn.jpg',\n",
        " 'production_companies': [{'id': 420,\n",
        "   'logo_path': '/hUzeosd33nzE5MCNsZxCGEKTXaQ.png',\n",
@@ -170,7 +170,7 @@
        " 'title': 'The Avengers',\n",
        " 'video': False,\n",
        " 'vote_average': 7.707,\n",
-       " 'vote_count': 28532,\n",
+       " 'vote_count': 28541,\n",
        " 'certification': 'PG-13'}"
       ]
      },
@@ -256,7 +256,7 @@
        "      <td>The Avengers</td>\n",
        "      <td>False</td>\n",
        "      <td>7.707</td>\n",
-       "      <td>28532</td>\n",
+       "      <td>28541</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -280,7 +280,7 @@
        "      <td>The Avengers</td>\n",
        "      <td>False</td>\n",
        "      <td>7.707</td>\n",
-       "      <td>28532</td>\n",
+       "      <td>28541</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -304,7 +304,7 @@
        "      <td>The Notebook</td>\n",
        "      <td>False</td>\n",
        "      <td>7.878</td>\n",
-       "      <td>10298</td>\n",
+       "      <td>10305</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -349,9 +349,9 @@
        "2  Behind every great love is a great story.  The Notebook  False   \n",
        "\n",
        "   vote_average vote_count certification  \n",
-       "0         7.707      28532         PG-13  \n",
-       "1         7.707      28532         PG-13  \n",
-       "2         7.878      10298         PG-13  \n",
+       "0         7.707      28541         PG-13  \n",
+       "1         7.707      28541         PG-13  \n",
+       "2         7.878      10305         PG-13  \n",
        "\n",
        "[3 rows x 26 columns]"
       ]
@@ -389,10 +389,15 @@
     {
      "data": {
       "text/plain": [
-       "['.ipynb_checkpoints',\n",
+       "[' final_tmdb_data2000.csv.gz',\n",
+       " ' final_tmdb_data2001.csv.gz',\n",
+       " '.ipynb_checkpoints',\n",
        " 'title_Aka.csv.gz',\n",
        " 'title_basics.csv.gz',\n",
-       " 'title_ratings.csv.gz']"
+       " 'title_ratings.csv.gz',\n",
+       " 'tmdb_api_results_2000.json',\n",
+       " 'tmdb_api_results_2001.json',\n",
+       " 'tmdb_results_combined.csv.gz']"
       ]
      },
      "execution_count": 9,
@@ -556,14 +561,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ee89a4be",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c5e9022681645ea8e97f01b8081f2b8",
+       "model_id": "a96bc2263ac546229718609288a1e4b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -577,12 +582,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ce8352cbf4e4067b092353461fd896b",
+       "model_id": "f3023a48ba424054a9e619d1766be88c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2000:   0%|          | 0/1446 [00:00<?, ?it/s]"
+       "Movies from 2000:   0%|          | 0/213 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -591,12 +596,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55401366eeca4b18bab410d7c31ec76f",
+       "model_id": "48a064b4ed7c418faa90b3d932998018",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2001:   0%|          | 0/1570 [00:00<?, ?it/s]"
+       "Movies from 2001:   0%|          | 0/240 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -652,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a315b860",
    "metadata": {},
    "outputs": [],
@@ -665,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "453c2289",
    "metadata": {},
    "outputs": [],
